--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.1",
+    "@angular/cli": "~12.2.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.1",
@@ -22,15 +24,15 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.0",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.0.0",
     "ngx-bootstrap-navbar": "0.0.5",
     "ngx-cookie-service": "^12.0.3",
     "ngx-file-drop": "^11.1.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "@angular/cli": "~12.2.0",
-    "@angular/compiler-cli": "~12.2.0",
     "typescript": "^4.3.5",
     "zone.js": "~0.11.4"
   },
@@ -47,9 +49,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "^4.3.5"
-  },  
-    "engines": { 
-      "node": "14.17.6",
-      "npm": "6.14.15"
+  },
+  "engines": {
+    "node": "14.17.6",
+    "npm": "6.14.15"
   }
 }
